AX: iOS VO+Safari does not read <summary> role or state https://bugs.webkit.org/show_bug.cgi?id=257162 rdar://109684906

Reviewed by Chris Fleizach.

This patch fixes the calculation for AccessibilityObject::supportsExpanded() so that <summary> elements
describe their state when using iOS voiceover. For <details> elements, we cannot rely on checking the
aria-expanded attribute since that does not exist on details elements (the attribute 'open' is used instead).
This affects <summary> elements as they use their <detail> parents to calculate accessibilitySupportsARIAExpanded().

iOS AX tests were also added to confirm that this is the case.

* Source/WebCore/accessibility/AccessibilityObject.cpp:
Update AccessibilityObject::supportsExpanded().

* Tools/WebKitTestRunner/InjectedBundle/AccessibilityUIElement.cpp:
* Tools/WebKitTestRunner/InjectedBundle/AccessibilityUIElement.h:
* Tools/WebKitTestRunner/InjectedBundle/Bindings/AccessibilityUIElement.idl:
* Tools/WebKitTestRunner/InjectedBundle/ios/AccessibilityUIElementIOS.mm:
Expose method for testing.

* LayoutTests/accessibility/ios-simulator/aria-details-toggle-summary-expected.txt:
* LayoutTests/accessibility/ios-simulator/aria-details-toggle-summary.html:
New test for checking isExpanded, supportsExpanded.

Canonical link: https://commits.webkit.org/267635@main